--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ members = [
 lto = true
 panic = 'unwind'
 codegen-units = 1
+
+[patch."https://github.com/matrix-org/matrix-rust-sdk/"]
+matrix-sdk = { git = "https://github.com/gnunicorn/matrix-rust-sdk/", branch = "expose-invite-details"}
+matrix-sdk-base = { git = "https://github.com/gnunicorn/matrix-rust-sdk/", branch = "expose-invite-details"}
